[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="WaveLabel" type="Label" parent="."]
margin_left = 940.0
margin_right = 1080.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "WAVE
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slash" type="Label" parent="."]
margin_left = 1180.0
margin_right = 1320.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "/
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveCounter" type="Label" parent="."]
margin_left = 1060.0
margin_right = 1178.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveAmount" type="Label" parent="."]
margin_left = 1160.0
margin_right = 1278.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCount" type="Label" parent="."]
margin_left = 180.0
margin_right = 298.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashCount" type="Label" parent="."]
margin_left = 154.0
margin_top = 60.0
margin_right = 272.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_left = 20.0
margin_right = 191.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 160, 120 )
custom_fonts/font = ExtResource( 1 )
text = "HEALTH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash" type="Label" parent="."]
margin_left = 40.0
margin_top = 60.0
margin_right = 182.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 160, 120 )
custom_fonts/font = ExtResource( 1 )
text = "CASH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -40.0
margin_right = 130.0
margin_bottom = 40.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -20.0
margin_right = 119.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Complete" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -40.0
margin_right = 196.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "The Base Survived
Victory!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
